# torshield

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  firefox.rs  firewall.rs  gen_icon.m  helper.rs  lib.rs  mac_spoof.rs  main.rs  menu.rs  proxy.rs  tor.rs  ts_helper.c
src/routes/: +layout.svelte  +page.svelte
