[package]
name = "torshield"
version = "0.8.0"
description = "TorShield — menubar OPSEC app"
authors = ["Silo"]
edition = "2021"

[lib]
name = "torshield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["socks"] }
getrandom = "0.3"
tempfile = "3"
hmac = "0.13"
sha2 = "0.11"
security-framework = "3"
